--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <body>
     <!-- header section  -->
-    <header class="w-10/12 mx-auto">
+    <header class="w-10/12 mx-auto mt-6 mb-28">
         <!-- nav bar part  -->
-        <nav class="navbar font-raleway mt-6 p-0 bg-base-100">
+        <nav class="navbar font-raleway p-0 bg-base-100">
             <div class="navbar-start">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="pe-4 lg:hidden">
@@ -80,7 +80,7 @@
         <!-- bg-gradient-to-r
     from-bgGradientDarker via-bgGradientDark to-bgGradientDarker -->
         <section
-            class="bg-bannerPhoto bg-contain bg-no-repeat min-h-[550px] min-w-full text-white mt-8 flex items-center justify-center">
+            class="bg-[url('/images/banner.png')] bg-contain bg-no-repeat min-h-[550px] min-w-full text-white mt-8 flex items-center justify-center">
             <div class="w-8/12 text-center space-y-8 absolute">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -93,21 +93,24 @@
                     Tickets</button>
                 <!-- border badge -->
                 <div class="flex gap-5 relative -bottom-20">
-                    <div class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center">
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
                         <img src="images/people.png" alt="">
                         <div>
                             <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
                             <p class="text-primaryDesColor">Registered users</p>
                         </div>
                     </div>
-                    <div class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center">
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
                         <img src="images/ticket-cupon.png" alt="">
                         <div>
                             <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
                             <p class="text-primaryDesColor">Tickets sold</p>
                         </div>
                     </div>
-                    <div class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center">
+                    <div
+                        class="bg-white flex px-8 items-center justify-center py-7 rounded-3xl gap-4 text-center border-b-2 border-primaryColor">
                         <img src="images/stoppage.png" alt="">
                         <div>
                             <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
