--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 
 <body>
     <!-- header section  -->
-    <header class="w-10/12 mx-auto mt-6 mb-16">
+    <header class="w-10/12 mx-auto pt-6 mb-16">
         <!-- nav bar part  -->
-        <nav class="navbar font-raleway p-0 bg-base-100">
+        <nav class="navbar font-raleway p-0">
             <div class="navbar-start">
                 <div class="dropdown">
                     <div tabindex="0" role="button" class="pe-4 lg:hidden">
@@ -96,7 +96,7 @@
                 <img src="images/people.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor">Registered users</p>
+                    <p class="text-primaryDesColor text-lg">Registered users</p>
                 </div>
             </div>
             <div
@@ -104,7 +104,7 @@
                 <img src="images/ticket-cupon.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor">Tickets sold</p>
+                    <p class="text-primaryDesColor text-lg">Tickets sold</p>
                 </div>
             </div>
             <div
@@ -112,7 +112,7 @@
                 <img src="images/stoppage.png" alt="">
                 <div>
                     <h1 class="text-primaryTitleColor text-4xl font-bold">500K+</h1>
-                    <p class="text-primaryDesColor">Rental Partners</p>
+                    <p class="text-primaryDesColor text-lg">Rental Partners</p>
                 </div>
             </div>
         </section>
@@ -157,9 +157,77 @@
             </div>
         </section>
         <!-- P H paribahan section  -->
-        <section class="mt-28">
+        <section class="bg-[#F7F8F8] border-t-2 rounded-[80px] border-primaryColor mt-28">
+            <!-- p.h info part  -->
+            <div class="w-10/12 mt-28 m-6 mx-auto">
+                <h1 class="text-center text-[40px] font-bold text-primaryTitleColor font-raleway">P.H Paribahan
+                </h1>
+                <p class="text-primaryDesColor text-lg text-center w-8/12 mx-auto mb-10">P H Paribahan: Reliable
+                    transportation
+                    with experienced drivers, punctuality, safety. Efficient travel for valued
+                    customers.</p>
+                <!-- ph info part  -->
+                <div class="flex items-center bg-[#FFFFFF] px-8 rounded-3xl">
+                    <div class="w-8/12">
+                        <div class="flex justify-between">
+                            <div class="flex items-center gap-2">
+                                <img src="images/bus-logo.png" alt="">
+                                <div>
+                                    <h2 class="text-3xl font-bold text-primaryTitleColor font-raleway">GreenLine
+                                        Paribahan
+                                    </h2>
+                                    <p class="text-lg text-primaryDesColor font-inter">Coach-008WEB ! AC_Business</p>
+                                </div>
+                            </div>
+                            <div class="flex gap-2 p-4 items-center bg-[#1DD10026] rounded-xl text-primaryColor">
+                                <img class="border-2 border-gray-300 border-dashed" src="images/seat-green.png" alt="">
+                                <p class="text-lg font-medium font-inter"><span id="rest-seat">40</span> Seats left</p>
+                            </div>
+                        </div>
 
+                        <!-- routed part  -->
+                        <div class="bg-[#F7F8F8] p-8 rounded-3xl mt-6">
+                            <div
+                                class="flex justify-between font-raleway border-b-2 pb-4 border-dashed text-lg font-semibold">
+                                <p class="text-primaryDesColor">Route</p>
+                                <p class="text-primaryTitleColor">Dhaka-Sylhet</p>
+                            </div>
+
+                            <div
+                                class="flex justify-between font-raleway border-b-2 py-4 border-dashed text-lg font-semibold">
+                                <p class="text-primaryDesColor">Departure Time</p>
+                                <p class="text-primaryTitleColor">9:00 PM</p>
+                            </div>
+
+                            <div class="mt-5 flex justify-center items-center gap-4">
+                                <p
+                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    Boarding Laxmipur</p>
+                                <p
+                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    Dropping Bogura</p>
+                                <p
+                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    Est. Time-11 Hour</p>
+                            </div>
+                        </div>
+                    </div>
+                    <img class="mx-8 border-2 border-gray-300 border-dashed" src="images/info-devider.png" alt="">
+                    <div class="flex-1 text-center font-raleway">
+                        <img class="border-2 border-gray-300 border-dashed mx-auto mb-6" src="images/fare.png" alt="">
+                        <h1 class="font-bold text-3xl text-primaryTitleColor">550 Taka</h1>
+                        <p class="font-semibold text-2xl text-primaryDesColor">Per Seat</p>
+                    </div>
+                </div>
+            </div>
+            <!-- p.h seats part  -->
+            <div>
+                <h1>you have to do the seats here cause of bg color</h1>
+            </div>
         </section>
+
+
+
     </main>
     <!-- footer section  -->
     <footer>
