--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
                 </button>
             </div>
         </nav>
+        <!-- banner part  -->
         <section
-            class="bg-[url('/images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -416,11 +417,6 @@
                         <!-- selected seats zone  -->
                         <div id="seat-details-container"
                             class="font-inter text-base text-seatColor mt-5 space-y-4 pb-3 border-b-2 border-[#03071233]">
-                            <!-- <div class="flex justify-between items-center">
-                                <p id="seat-num">C2</p>
-                                <p>Economy</p>
-                                <p id="">550</p>
-                            </div> -->
                         </div>
                         <!-- total price zone  -->
                         <div class="flex justify-between mt-2 font-inter font-medium text-base text-primaryTitleColor">
