--- a/index.html
+++ b/index.html
@@ -86,10 +86,9 @@
                     service for all your journey
                     requirements.
                 </p>
-                <button
+                <button id="buy-ticket-btn"
                     class="bg-primaryColor border-none text-primaryTitleColor text-xl font-bold px-7 py-5 rounded-xl content-center">Buy
                     Tickets</button>
-            </div>
         </section>
         <!-- header badge  -->
         <section class="flex justify-center gap-5 relative bottom-16">
@@ -159,7 +158,7 @@
             </div>
         </section>
         <!-- P H paribahan section  -->
-        <section class="bg-primaryBgColor border-t-2 rounded-[80px] border-primaryColor mt-28">
+        <section id="paribahan" class="bg-primaryBgColor border-t-2 rounded-t-[80px] border-primaryColor my-28">
             <!-- p.h info part  -->
             <div class="w-10/12 mt-28 m-6 mx-auto">
                 <h1 class="text-center text-[40px] font-bold text-primaryTitleColor font-raleway">P.H Paribahan
@@ -424,13 +423,18 @@
                             <p>BDT <span id="total-price">0</span></p>
                         </div>
                         <!-- coupon entry field  -->
-                        <div class="flex mt-4 relative">
+                        <div id="coupon-container" class="flex mt-4 relative">
                             <input type="text" class="w-full text-[#03071266] rounded-xl px-5 py-4" name=""
                                 id="coupon-field" placeholder="Have any coupon?">
                             <button id="coupon-btn"
                                 class="text-white font-semibold text-base rounded-xl px-4 py-2 bg-primaryColor absolute end-2 top-2 bottom-2">
                                 Apply
                             </button>
+                        </div>
+                        <!-- discount amount field  -->
+                        <div id="discount-total"
+                            class="flex justify-between mt-4 font-inter font-medium text-base text-primaryTitleColor">
+
                         </div>
                         <!-- grand total part  -->
                         <div class="flex justify-between mt-4 font-inter font-medium text-base text-primaryTitleColor">
@@ -450,18 +454,43 @@
                         <div>
                             <h2 class="font-inter font-semibold text-base text-primaryTitleColor">Phone
                                 Number<sup>*</sup></h2>
-                            <input type="text"
+                            <input type="number"
                                 class="w-full border border-[#0307121A] rounded-xl text-[#03071266] font-inter text-base mt-4 p-5"
-                                name="" id="" placeholder="Enter your name" required>
+                                name="" id="num-field" placeholder="Enter Phone Number" required>
                         </div>
                         <div>
                             <h2 class="font-inter font-semibold text-base text-primaryTitleColor">Email ID</h2>
-                            <input type="text"
+                            <input type="email"
                                 class="w-full border border-[#0307121A] rounded-xl text-[#03071266] font-inter text-base mt-4 p-5"
-                                name="" id="" placeholder="Enter your name">
+                                name="" id="" placeholder="Enter your email Id">
                         </div>
                         <button
-                            class="font-raleway font-extrabold text-xl text-white bg-primaryColor w-full py-5 px-8 rounded-2xl">Next</button>
+                            class="font-raleway font-extrabold text-xl text-white bg-primaryColor w-full py-5 px-8 rounded-2xl"
+                            onclick="my_modal_4.showModal()">Next</button>
+                        <dialog id="my_modal_4" class="modal">
+                            <div class="modal-box w-11/12 max-w-5xl">
+                                <div class="w-6/12 space-y-4 mx-auto text-center">
+                                    <img class="mx-auto" src="images/success.png" alt="">
+                                    <h2 class="text-primaryTitleColor font-raleway font-bold text-2xl">Thank you for
+                                        Booking Our Bus Seats.
+
+                                        We are working hard to find the best service and deals for you.</h2>
+                                    <p class="text-xl text-gray-500 font-inter">Shortly you will find a confirmation in
+                                        your email.
+                                    </p>
+                                    <form method="dialog">
+                                        <button
+                                            class="py-5 px-20 rounded-3xl bg-green-600 text-white text-xl font-bold">Continue</button>
+                                    </form>
+                                </div>
+                                <div class="modal-action">
+                                    <form method="dialog">
+                                        <!-- if there is a button, it will close the modal -->
+                                        <button class="btn">Close</button>
+                                    </form>
+                                </div>
+                            </div>
+                        </dialog>
                     </div>
                     <!-- terms condition part  -->
                     <div class="flex justify-around mt-6">
@@ -477,8 +506,31 @@
         </section>
     </main>
     <!-- footer section  -->
-    <footer>
-
+    <footer class="bg-black px-8 py-16">
+        <div class="flex justify-between items-center w-10/12 mx-auto">
+            <div>
+                <h1 class="text-white text-3xl font-bold font-inter">P-Ticket</h1>
+                <p class="text-gray-300 text-xl mt-2">To making a better daily commuting you can choose it.</p>
+                <p class="text-gray-300 mt-10">@all rights reserved, P-Ticket services limited.2024</p>
+            </div>
+            <div>
+                <div class="text-end">
+                    <h3 class="text-2xl font-bold text-white">DownLoad Our App</h3>
+                    <div class="flex justify-around my-4 gap-2 border border-gray-300 rounded-sm">
+                        <img src="images/playstore.png" alt="">
+                        <div class="text-white">
+                            <h5 class="text-lg">GET IT ON</h5>
+                            <h2 class="text-2xl font-semibold">Google Play</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="flex justify-end gap-4 text-end text-white text-xs font-semibold font-inter">
+                    <p>Terms & Condition</p>
+                    <p>Return & refund policy</p>
+                    <p>Privacy policy</p>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- script file  -->
