--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
                         'inputTextColor': '#03071266',
                         'menuBarColor': '#030712B3',
                         'primaryBgColor': '#F7F8F8',
-                        // 'bgGradientDark': '#03071280',
-                        // 'bgGradientDarker': '#03071200',
                     },
                     backgroundImage: {
-                        'bannerPhoto': "url('/images/banner.png')",
+                        'bannerPhoto': "url('./images/banner.png')",
                     }
                 }
             }
@@ -78,7 +76,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
+            class="bg-backgroundImage bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
