another bug fix

--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
                         'menuBarColor': '#030712B3',
                         'primaryBgColor': '#F7F8F8',
                     },
-                    backgroundImage: {
-                        'bannerPhoto': "url('./images/banner.png')",
-                    }
                 }
             }
         }
@@ -76,7 +73,7 @@
         </nav>
         <!-- banner part  -->
         <section
-            class="bg-backgroundImage bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
+            class="bg-[url('./images/banner.png')] bg-no-repeat bg-contain bg-center min-h-[550px] text-white mt-8 flex items-center justify-center">
             <div class="w-8/12 text-center space-y-8">
                 <h1 class="text-6xl font-extrabold">End-to-End Travel with <br><span class="text-primaryColor">P
                         Paribahan</span></h1>
@@ -131,8 +128,8 @@
                         <p class="text-lg font-medium text-seatColor">use by January 2024</p>
                     </div>
                     <img class="hidden lg:block" src="images/cupon-devider.png" alt="">
-                    <div class="font-raleway w-1/3">
-                        <h1 class="text-[32px] font-bold text-primaryTitleColor">NEW15</h1>
+                    <div class="font-raleway text-center w-1/3">
+                        <h1 class="text-3xl font-bold text-primaryTitleColor">NEW15</h1>
                         <p class="text-[#03071266] text-xl font-medium">Coupon Code</p>
                     </div>
                 </div>
@@ -143,8 +140,8 @@
                         <p class="text-lg font-medium text-seatColor">use by January 2024</p>
                     </div>
                     <img class="hidden lg:block" src="images/cupon-devider.png" alt="">
-                    <div class="font-raleway w-1/3">
-                        <h1 class="text-[32px] font-bold text-primaryTitleColor">Couple 20</h1>
+                    <div class="font-raleway text-center w-1/3">
+                        <h1 class="text-3xl font-bold text-primaryTitleColor">Couple 20</h1>
                         <p class="text-[#03071266] text-xl font-medium">Coupon Code</p>
                     </div>
                 </div>
@@ -200,13 +197,13 @@
 
                             <div class="mt-5 flex justify-center items-center gap-4">
                                 <p
-                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
-                                    Boarding Laxmipur</p>
+                                    class="flex-1 text-center text-sm font-inter font-medium text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    Boarding Point-Laxmipur</p>
                                 <p
-                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
-                                    Dropping Bogura</p>
+                                    class="flex-1 text-center text-sm font-inter font-medium text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    Dropping Point-Bogura</p>
                                 <p
-                                    class="flex-1 font-inter font-medium text-base text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
+                                    class="flex-1 text-center text-sm font-inter font-medium text-[#030712CC] bg-[#0307120D] rounded-xl px-4 py-5">
                                     Est. Time-11 Hour</p>
                             </div>
                         </div>
@@ -227,7 +224,7 @@
                         class="font-raleway font-semibold text-2xl text-primaryTitleColor border-b-2 border-dashed border-gray-300 pb-6">
                         Select Your Seat</h3>
                     <div class=" flex justify-between items-center border-b-2 border-dashed border-gray-300 py-5">
-                        <p class="flex items-center">
+                        <p class="flex gap-2 items-center">
                             <img class="border-2 rounded-md border-gray-300 border-dashed" src="images/seat-gray.png"
                                 alt="">
                             <span class="text-seatColor font-medium font-inter text-lg">Available</span>
